# mini_bundle

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
bindings/: mypy_bindings.sh
bindings/mini_bundle/: Readme_pypi.md  __init__.py  __init__.pyi  _glfw_set_search_path.py  im_col32.py  mini_bundle.pyi
bindings/mini_bundle/imgui/: __init__.pyi  backends.pyi  internal.pyi  test_engine.pyi  test_engine_checks.py
bindings/mini_bundle/implot/: __init__.pyi  internal.pyi
cmake/: add_glfw.cmake  add_imgui.cmake  add_mini_bundle_bindings.cmake  add_simple_library.cmake  lg_cmake_utils.cmake  lg_setup_module.cmake  mini_bundle_config.h
src/mini_bundle/: mini_bundle.cpp  mini_bundle.h
widget/: CMakeLists.txt
widget/ImGuiNodes/ImGuiNodes/: nodes.cpp  nodes.h
widget/ImGuiNodes/bindings/: pybind_ImGuiNodes.cpp
widget/bindings_generation/cpp/: all_pybind_files.cmake
widget/slider/: slider.cpp
widget/src/: demo.cpp
widgets/nodes/: nodes.cpp  nodes.h
